# unlocode-tool

./: Pipfile  README.md  main.ipynb  pyproject.toml
loc221csv/: 2022-1 SubdivisionCodes.csv
new/: airports.json  dryports.json  rails.json  roads.json  seaports.json
old/: airports.json  seaports.json
v2/: airports.json  roads.json  seaports.json
