[tool.poetry]
name = "unlocode-tool"
version = "0.1.0"
description = ""
authors = ["Hank Wang <467745+hanksudo@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
